--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </div>
                 <form>
                     <div class="form">
-                        <div class="form__radio-group">
-                            <input type="radio" name="size" id="subscribe" class="form__radio-input">
+                        <div class="form__radio-group active subscribe">
+                            <input type="radio" name="size" id="subscribe" class="form__radio-input" checked>
                             <label class="form__label-radio" for="subscribe">
                                 <span class="form__radio-button"></span> $44.95 - Subscribe & Save 10% every
                             </label>
@@ -38,6 +38,7 @@
                 </form>
             </div>
         </section>
+        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="dist/main.js"></script>    
     </body>
 </html>
