--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                             <label class="form__label-radio" for="subscribe">
                                 <span class="form__radio-button"></span> $44.95 - Subscribe & Save 10% every
                             </label>
+                            <div class="subs-wrapper">
+                                <input type="text" disabled placeholder="1 month">
+                                <ul class="subs-wrapper__list">
+                                    <li>1 month</li>
+                                    <li>2 months</li>
+                                    <li>3 months</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="form__radio-group">
                             <input type="radio" name="size" id="one-time" class="form__radio-input">
