--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>  
         <section class="main-container">
-            <div class="main-container__left">
+            <div class="main-container__left slider">
 
             </div>
             <div class="main-container__right">
@@ -16,6 +16,13 @@
                     <span>LOREM + LOREM IPSUM</span>
                 </div>
                 <h2 class="heading">Lorem ipsum dolor</h2>
+                <div class="ratings">
+                    <div class="stars">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <span class="reviews">1234 reviews</span>
+                </div>
+
                 <div class="content">
                     <p class="paragraph">An lorem of super-nutrients to promote regular digestion and healthy skin. This nutritious and tasty blend is high in vitamins, 
                     minerals, enzymes and antioxidants that can ensure optimal cell function and effective protein and nutrient absorption. </p>
@@ -44,6 +51,12 @@
                         </div>
                     </div>
                 </form>
+                <div class="add-to-cart">
+                    <div class="counter">
+                        <span>-</span>0<span>+</span>
+                    </div>
+                    <a class="btn-primary" href="#">Add to cart</a>
+                </div>
             </div>
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
