--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </form>
                 <div class="add-to-cart">
                     <div class="counter">
-                        <span>-</span>0<span>+</span>
+                        <span class="decrease">-</span><input class="value" type="text" value="0"><span class="increase">+</span>
                     </div>
                     <a class="btn-primary" href="#">Add to cart</a>
                 </div>
