Update styles and logic for add to cart counter

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                 </form>
                 <div class="add-to-cart">
                     <div class="counter">
-                        <span class="decrease">-</span><input class="value" type="text" value="0"><span class="increase">+</span>
+                        <span class="counter__decrease">-</span><input class="counter__value" type="text" value="0"><span class="counter__increase">+</span>
                     </div>
                     <a class="btn-primary" href="#">Add to cart</a>
                 </div>
             </div>
+            <div class="main-container__"
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="dist/main.js"></script>    
