Update layout for index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                     <a class="btn-primary" href="#">Add to cart</a>
                 </div>
             </div>
-            <div class="main-container__"
+            <div class="main-container__info">
+                
+            </div>
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="dist/main.js"></script>    
