--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </div>
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="src/js/vendors/slick.min.js"></script>
         <script src="dist/main.js"></script>    
     </body>
 </html>
