Replace slick slider with flickity slider

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <body>  
         <section class="main-container">
             <div class="main-container__content">
-                <div class="main-container__content__left slider">
-    
+                <div class="main-container__content__left slider slider-section">
+                    <img src="/src/images/slider-img-1.png" alt="slider-img-1" />
+                    <img src="/src/images/slider-img-2.png" alt="slider-img-2" />
+                    <img src="/src/images/slider-img-3.png" alt="slider-img-3" />
                 </div>
                 <div class="main-container__content__right">
                     <div class="breadcrumbs">
@@ -23,7 +25,6 @@
                         </div>
                         <span class="reviews">1234 reviews</span>
                     </div>
-    
                     <div class="content">
                         <p class="paragraph">An lorem of super-nutrients to promote regular digestion and healthy skin. This nutritious and tasty blend is high in vitamins, 
                         minerals, enzymes and antioxidants that can ensure optimal cell function and effective protein and nutrient absorption. </p>
@@ -62,7 +63,7 @@
             </div>
             <div class="main-container__info">
                 <div class="product">
-                    <img class="product__img" src="/src/images/product-img.png" alt="product-img">
+                    <img class="product__img" src="/src/images/product-img.png" alt="product-img" />
                     <div class="product__info">
                         <h3>Superfood Greens</h3>
                         <span>1234 Reviews</span>
@@ -78,7 +79,7 @@
             </div>
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="src/js/vendors/slick.min.js"></script>
+        <script src="src/js/vendors/flickity.min.js"></script>
         <script src="dist/main.js"></script>    
     </body>
 </html>
