--- a/index.html
+++ b/index.html
@@ -9,10 +9,28 @@
     <body>  
         <section class="main-container">
             <div class="main-container__content">
-                <div class="main-container__content__left slider slider-section">
-                    <img src="/src/images/slider-img-1.png" alt="slider-img-1" />
-                    <img src="/src/images/slider-img-2.png" alt="slider-img-2" />
-                    <img src="/src/images/slider-img-3.png" alt="slider-img-3" />
+                <div id="slider-section" class="main-container__content__left slider slider-section">
+                    <!-- Carousel Card -->
+                    <div class="card card-raised card-carousel">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <div class="carousel slide" data-ride="carousel">
+                            <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    <div class="item">
+                                        <img src="/src/images/slider-img-1.png" class="slider-img" alt="slider-img-1" />
+                                    </div>
+                                    <div class="item">
+                                        <img src="/src/images/slider-img-2.png" class="slider-img" alt="slider-img-2" />
+                                    </div>
+                                    <div class="item active">
+                                        <img src="/src/images/slider-img-3.png" class="slider-img" alt="slider-img-3" />
+                                    </div>
+                                </div>
+                                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"></a>
+                                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="main-container__content__right">
                     <div class="breadcrumbs">
@@ -57,7 +75,7 @@
                         <div class="counter">
                             <span class="counter__decrease">-</span><input class="counter__value" type="text" value="0"><span class="counter__increase">+</span>
                         </div>
-                        <a class="btn-primary" href="#">Add to cart</a>
+                        <a class="section-btn" href="#">Add to cart</a>
                     </div>
                 </div>
             </div>
@@ -74,12 +92,12 @@
                         <span>$49.95</span>
                         <span>Subscribe & Save 10%</span>
                     </div>
-                    <a class="btn-primary" href="#">Add to cart</a>
+                    <a class="section-btn" href="#">Add to cart</a>
                 </div>
             </div>
         </section>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="src/js/vendors/flickity.min.js"></script>
+        <script src="src/js/vendors/bootstrap.min.js"></script>
         <script src="dist/main.js"></script>    
     </body>
 </html>
