--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                         <span>LOREM + LOREM IPSUM</span>
                     </div>
                     <h2 class="heading">Lorem ipsum dolor</h2>
+                    <div class="circle-text">
+                        <div class="rotating">
+                            <h3 data-splitting>SUPERFOOD HEALTH FOR YOU • SUPERFOOD HEALTH FOR YOU • </h3>
+                            <div class="circle-text__icon">
+                                <div class="rotating-slow">
+                                    <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6.32962 1.68032L7.33901 1.85831L6.0165 6.82897L5.8723 6.80355L6.32962 1.68032Z" fill="#3343BB"/>
+                                        <path d="M4.55173 11.774L5.56112 11.952L6.01843 6.82876L5.87424 6.80334L4.55173 11.774Z" fill="#3343BB"/>
+                                        <path d="M11.0801 7.20235L10.9022 8.21174L5.93149 6.88923L5.95692 6.74503L11.0801 7.20235Z" fill="#3343BB"/>
+                                        <path d="M0.985016 5.4251L0.807033 6.43449L5.93026 6.89181L5.95568 6.74761L0.985016 5.4251Z" fill="#3343BB"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="ratings">
                         <div class="stars">
                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
@@ -96,8 +111,9 @@
                 </div>
             </div>
         </section>
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="src/js/vendors/jquery-1.13.3.min.js"></script>
         <script src="src/js/vendors/bootstrap.min.js"></script>
-        <script src="dist/main.js"></script>    
+        <script src="src/js/vendors/splitting.min.js"></script>
+        <script src="dist/main.js"></script>
     </body>
 </html>
