--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
         <section class="main-container">
             <div class="main-container__content">
                 <div id="slider-section" class="main-container__content__left slider slider-section">
-                    <!-- Carousel Card -->
                     <div class="card card-raised card-carousel">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <div class="carousel slide" data-ride="carousel">
-                            <!-- Wrapper for slides -->
                                 <div class="carousel-inner">
                                     <div class="item">
                                         <img src="/src/images/slider-img-1.png" class="slider-img" alt="slider-img-1" />
@@ -70,7 +68,7 @@
                                     <span class="form__radio-button"></span> $44.95 - Subscribe & Save 10% every
                                 </label>
                                 <div class="subs-wrapper">
-                                    <input type="text" disabled placeholder="1 month">
+                                    <input class="subs-wrapper__option" type="text" disabled placeholder="1 month">
                                     <ul class="subs-wrapper__list">
                                         <li>1 month</li>
                                         <li>2 months</li>
